// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getContentAriaAttributes() should return correct aria attributes for state: error 1`] = `
{
  "aria-describedby": "descriptionId",
  "aria-labelledby": "labelId",
  "aria-live": "assertive",
  "role": "alert",
}
`;

exports[`getContentAriaAttributes() should return correct aria attributes for state: info 1`] = `
{
  "aria-describedby": "descriptionId",
  "aria-labelledby": "labelId",
  "aria-live": "polite",
  "role": "status",
}
`;

exports[`getContentAriaAttributes() should return correct aria attributes for state: success 1`] = `
{
  "aria-describedby": "descriptionId",
  "aria-labelledby": "labelId",
  "aria-live": "polite",
  "role": "status",
}
`;

exports[`getContentAriaAttributes() should return correct aria attributes for state: warning 1`] = `
{
  "aria-describedby": "descriptionId",
  "aria-labelledby": "labelId",
  "aria-live": "assertive",
  "role": "alert",
}
`;

exports[`getInlineNotificationIconName() should return correct icon for state: error 1`] = `"exclamation"`;

exports[`getInlineNotificationIconName() should return correct icon for state: info 1`] = `"information"`;

exports[`getInlineNotificationIconName() should return correct icon for state: success 1`] = `"success"`;

exports[`getInlineNotificationIconName() should return correct icon for state: warning 1`] = `"warning"`;
